test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_6.snaphost
HTTP/2.0 200 OK
Content-Length: 36
Content-Type: application/json
Date: Tue, 01 Apr 2025 17:41:25 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.14+7
X-Mongodb-Service-Version: gitHash=71cb61e3b30cf2c7accfe959792aefa856078301; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"20.39.63.65"}